cog_schemars/tests/ui/transform_str.rs
use cog_schemars::JsonSchema;

#[derive(JsonSchema)]
#[cog_schemars(transform = "x")]
pub struct Struct;

fn main() {}
